# NanoTensor

./: CMakeLists.txt  README.md
include/nanotensor/: ops.hpp  quantization.hpp  tensor.hpp
src/: main.cpp  ops.cpp  quantization.cpp  wasm_bindings.cpp
web/: index.html
